...
        <variable
            name="loading"
            type="boolean"/>
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <!-- MAIN CONTENT -->
...
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- IMAGES LIST -->

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvActivityMainImages"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </android.support.v4.widget.SwipeRefreshLayout>

...
