<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import
            type="android.view.View"/>

        <variable
            name="imageData"
            type="greendao.ImageData"/>

        <variable
            name="loading"
            type="boolean"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/svActivityDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- IMAGE -->

                <ImageView
                    android:id="@+id/ivViewImageCard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_image_card_height"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:id="@+id/rlImageInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/ivViewImageCard">

                    <include
                        android:id="@+id/viewImageInfo"
                        layout="@layout/view_image_info"
                        bind:imageData="@{imageData}"/>

                </RelativeLayout>

                <View
                    android:id="@+id/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_image_card_height"
                    android:background="@drawable/gradient_overlay" />

                <!-- LOADING LAYOUT (IT SHOW WHEN THE LIST IS EMPTY) -->

                <include
                    android:id="@+id/loadingLayout"
                    layout="@layout/view_initial_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_details_content_loading_margin"
                    bind:visible="@{loading}"
                    android:layout_below="@+id/ivViewImageCard"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{loading ? View.GONE : View.VISIBLE}"
                    android:layout_below="@+id/ivViewImageCard">

                    <TextView
                        android:id="@+id/tvActivityDetailsContributor"
                        style="@style/AppTextViewLarge"
                        android:textColor="@color/color_primary_dark"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/activity_details_content_text_margin"/>

                    <TextView
                        android:id="@+id/tvActivityDetailsCategories"
                        style="@style/AppTextViewMedium"
                        android:textColor="@color/color_primary_dark"
                        android:layout_margin="@dimen/activity_details_content_text_margin"/>

                    <TextView
                        style="@style/AppTextViewMedium"
                        android:textColor="@color/color_primary_dark"
                        android:text="@{imageData.description}"
                        android:layout_margin="@dimen/activity_details_content_text_margin"/>

                </LinearLayout>

            </RelativeLayout>

        </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

        <!-- TOOLBAR -->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"/>

    </RelativeLayout>

</layout>