<resources>
    <!-- APP -->
    <string name="app_name">Gallery App</string>

    <!-- NAVIGATION VIEW (HEADER) -->
    <string name="navigation_view_header_text">UPDAY</string>

    <!-- NAVIGATION VIEW (FOOTER) -->
    <string name="navigation_view_footer_text">PROJECT\'S GIT</string>

    <!-- MAIN ACTIVITY -->
    <string name="type_all">All</string>
    <string name="type_photo">Photo</string>
    <string name="type_illustration">Illustration</string>
    <string name="type_vector">Vector</string>

    <!-- DETAILS ACTIVITY -->
    <string name="activity_details_menu_share">Share</string>
    <string name="activity_details_intent_share">Share image</string>

    <!-- MISC -->
    <string name="github_uri">https://github.com/PedroOkawa/gallery-app</string>
    <string name="contributor_label">Contributor: </string>
    <string name="id_label">ID: </string>
    <string name="category_label">Categories: </string>
    <string name="connection_error_message">Sorry, it seems that you\'re not online</string>
</resources>
